<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/profile" />

    <item
        android:id="@+id/action_subscribes"
        android:icon="@drawable/ic_subscribes"
        android:title="@string/channels" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_outline"
        android:title="@string/upload" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

</menu>